@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009-2012 jMonkeyEngine
+ * Copyright (c) 2009-2021 jMonkeyEngine
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -41,6 +41,7 @@ import java.awt.Canvas;
 import java.awt.Graphics;
 import java.io.IOException;
 import java.io.InputStream;
+import java.lang.reflect.InvocationTargetException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import javax.swing.SwingUtilities;
@@ -58,6 +59,7 @@ public class AppHarness extends Applet {
     private String appClass;
     private URL appCfg = null;
 
+    @SuppressWarnings("unchecked")
     private void createCanvas(){
         AppSettings settings = new AppSettings(true);
 
@@ -79,13 +81,15 @@ public class AppHarness extends Applet {
         JmeSystem.setLowPermissions(true);
 
         try{
-            Class<? extends LegacyApplication> clazz = (Class<? extends LegacyApplication>) Class.forName(appClass);
-            app = clazz.newInstance();
-        }catch (ClassNotFoundException ex){
-            ex.printStackTrace();
-        }catch (InstantiationException ex){
-            ex.printStackTrace();
-        }catch (IllegalAccessException ex){
+            Class clazz = Class.forName(appClass);
+            app = (LegacyApplication) clazz.getDeclaredConstructor().newInstance();
+        }catch (ClassNotFoundException
+                | InstantiationException
+                | IllegalAccessException
+                | IllegalArgumentException
+                | InvocationTargetException
+                | NoSuchMethodException
+                | SecurityException ex) {
             ex.printStackTrace();
         }
 
@@ -138,6 +142,7 @@ public class AppHarness extends Applet {
     public void destroy(){
         System.out.println("applet:destroyStart");
         SwingUtilities.invokeLater(new Runnable(){
+            @Override
             public void run(){
                 removeAll();
                 System.out.println("applet:destroyRemoved");
