@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009-2012 jMonkeyEngine
+ * Copyright (c) 2009-2021 jMonkeyEngine
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -40,6 +40,7 @@ import com.jme3.system.JmeSystem;
 import java.applet.Applet;
 import java.awt.Canvas;
 import java.awt.Graphics;
+import java.lang.reflect.InvocationTargetException;
 import java.util.concurrent.Callable;
 import javax.swing.SwingUtilities;
 
@@ -53,22 +54,25 @@ public class TestApplet extends Applet {
     public TestApplet(){
     }
 
+    @SuppressWarnings("unchecked")
     public static void createCanvas(String appClass){
         AppSettings settings = new AppSettings(true);
         settings.setWidth(640);
         settings.setHeight(480);
-//        settings.setRenderer(AppSettings.JOGL);
+        settings.setRenderer(AppSettings.LWJGL_OPENGL2);
 
         JmeSystem.setLowPermissions(true);
 
         try{
-            Class<? extends LegacyApplication> clazz = (Class<? extends LegacyApplication>) Class.forName(appClass);
-            app = clazz.newInstance();
-        }catch (ClassNotFoundException ex){
-            ex.printStackTrace();
-        }catch (InstantiationException ex){
-            ex.printStackTrace();
-        }catch (IllegalAccessException ex){
+            Class clazz = Class.forName(appClass);
+            app = (LegacyApplication) clazz.getDeclaredConstructor().newInstance();
+        } catch (ClassNotFoundException
+                | InstantiationException
+                | IllegalAccessException
+                | IllegalArgumentException
+                | InvocationTargetException
+                | NoSuchMethodException
+                | SecurityException ex) {
             ex.printStackTrace();
         }
 
@@ -85,6 +89,7 @@ public class TestApplet extends Applet {
         app.startCanvas();
 
         app.enqueue(new Callable<Void>(){
+            @Override
             public Void call(){
                 if (app instanceof SimpleApplication){
                     SimpleApplication simpleApp = (SimpleApplication) app;
@@ -133,6 +138,7 @@ public class TestApplet extends Applet {
     @Override
     public void destroy(){
         SwingUtilities.invokeLater(new Runnable(){
+            @Override
             public void run(){
                 removeAll();
                 System.out.println("applet:destroyStart");
