@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009-2012 jMonkeyEngine
+ * Copyright (c) 2009-2021 jMonkeyEngine
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -45,6 +45,7 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
+import java.lang.reflect.InvocationTargetException;
 import java.util.concurrent.Callable;
 import java.util.logging.ConsoleHandler;
 import java.util.logging.Handler;
@@ -88,6 +89,7 @@ public class TestCanvas {
         final JMenuItem itemRemoveCanvas = new JMenuItem("Remove Canvas");
         menuTortureMethods.add(itemRemoveCanvas);
         itemRemoveCanvas.addActionListener(new ActionListener() {
+            @Override
             public void actionPerformed(ActionEvent e) {
                 if (itemRemoveCanvas.getText().equals("Remove Canvas")){
                     currentPanel.remove(canvas);
@@ -104,6 +106,7 @@ public class TestCanvas {
         final JMenuItem itemHideCanvas = new JMenuItem("Hide Canvas");
         menuTortureMethods.add(itemHideCanvas);
         itemHideCanvas.addActionListener(new ActionListener() {
+            @Override
             public void actionPerformed(ActionEvent e) {
                 if (itemHideCanvas.getText().equals("Hide Canvas")){
                     canvas.setVisible(false);
@@ -118,6 +121,7 @@ public class TestCanvas {
         final JMenuItem itemSwitchTab = new JMenuItem("Switch to tab #2");
         menuTortureMethods.add(itemSwitchTab);
         itemSwitchTab.addActionListener(new ActionListener(){
+           @Override
            public void actionPerformed(ActionEvent e){
                if (itemSwitchTab.getText().equals("Switch to tab #2")){
                    canvasPanel1.remove(canvas);
@@ -136,6 +140,7 @@ public class TestCanvas {
         JMenuItem itemSwitchLaf = new JMenuItem("Switch Look and Feel");
         menuTortureMethods.add(itemSwitchLaf);
         itemSwitchLaf.addActionListener(new ActionListener(){
+            @Override
             public void actionPerformed(ActionEvent e){
                 try {
                     UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
@@ -150,6 +155,7 @@ public class TestCanvas {
         JMenuItem itemSmallSize = new JMenuItem("Set size to (0, 0)");
         menuTortureMethods.add(itemSmallSize);
         itemSmallSize.addActionListener(new ActionListener(){
+            @Override
             public void actionPerformed(ActionEvent e){
                 Dimension preferred = frame.getPreferredSize();
                 frame.setPreferredSize(new Dimension(0, 0));
@@ -161,6 +167,7 @@ public class TestCanvas {
         JMenuItem itemKillCanvas = new JMenuItem("Stop/Start Canvas");
         menuTortureMethods.add(itemKillCanvas);
         itemKillCanvas.addActionListener(new ActionListener() {
+            @Override
             public void actionPerformed(ActionEvent e) {
                 currentPanel.remove(canvas);
                 app.stop(true);
@@ -175,6 +182,7 @@ public class TestCanvas {
         JMenuItem itemExit = new JMenuItem("Exit");
         menuTortureMethods.add(itemExit);
         itemExit.addActionListener(new ActionListener() {
+            @Override
             public void actionPerformed(ActionEvent ae) {
                 frame.dispose();
                 app.stop();
@@ -196,19 +204,22 @@ public class TestCanvas {
         createMenu();
     }
 
+    @SuppressWarnings("unchecked")
     public static void createCanvas(String appClass){
         AppSettings settings = new AppSettings(true);
         settings.setWidth(640);
         settings.setHeight(480);
 
         try{
-            Class<? extends LegacyApplication> clazz = (Class<? extends LegacyApplication>) Class.forName(appClass);
-            app = clazz.newInstance();
-        }catch (ClassNotFoundException ex){
-            ex.printStackTrace();
-        }catch (InstantiationException ex){
-            ex.printStackTrace();
-        }catch (IllegalAccessException ex){
+            Class clazz = Class.forName(appClass);
+            app = (LegacyApplication) clazz.getDeclaredConstructor().newInstance();
+        }catch (ClassNotFoundException
+                | InstantiationException
+                | IllegalAccessException
+                | IllegalArgumentException
+                | InvocationTargetException
+                | NoSuchMethodException
+                | SecurityException ex) {
             ex.printStackTrace();
         }
 
@@ -225,6 +236,7 @@ public class TestCanvas {
     public static void startApp(){
         app.startCanvas();
         app.enqueue(new Callable<Void>(){
+            @Override
             public Void call(){
                 if (app instanceof SimpleApplication){
                     SimpleApplication simpleApp = (SimpleApplication) app;
@@ -253,6 +265,7 @@ public class TestCanvas {
         }
 
         SwingUtilities.invokeLater(new Runnable(){
+            @Override
             public void run(){
                 JPopupMenu.setDefaultLightWeightPopupEnabled(false);
 
