@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009-2012 jMonkeyEngine
+ * Copyright (c) 2009-2023 jMonkeyEngine
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -35,11 +35,11 @@ package com.jme3.system.lwjgl;
 import com.jme3.input.lwjgl.JInputJoyInput;
 import com.jme3.input.lwjgl.LwjglKeyInput;
 import com.jme3.input.lwjgl.LwjglMouseInput;
+import com.jme3.opencl.DefaultPlatformChooser;
 import com.jme3.opencl.Device;
 import com.jme3.opencl.PlatformChooser;
 import com.jme3.opencl.lwjgl.LwjglDevice;
 import com.jme3.opencl.lwjgl.LwjglPlatform;
-import com.jme3.opencl.DefaultPlatformChooser;
 import com.jme3.renderer.Renderer;
 import com.jme3.renderer.RendererException;
 import com.jme3.renderer.lwjgl.LwjglGL;
@@ -50,7 +50,7 @@ import com.jme3.renderer.opengl.GL;
 import com.jme3.renderer.opengl.GL2;
 import com.jme3.renderer.opengl.GL3;
 import com.jme3.renderer.opengl.GL4;
-import com.jme3.renderer.opengl.GLDebugDesktop;
+import com.jme3.renderer.opengl.GLDebug;
 import com.jme3.renderer.opengl.GLExt;
 import com.jme3.renderer.opengl.GLFbo;
 import com.jme3.renderer.opengl.GLRenderer;
@@ -60,7 +60,6 @@ import com.jme3.renderer.opengl.GLTracer;
 import com.jme3.system.*;
 import java.util.ArrayList;
 import java.util.List;
-
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -92,6 +91,17 @@ public abstract class LwjglContext implements JmeContext {
     protected LwjglPlatform clPlatform;
     protected com.jme3.opencl.lwjgl.LwjglContext clContext;
 
+    /**
+     * Accesses the listener that receives events related to this context.
+     *
+     * @return the pre-existing instance
+     */
+    @Override
+    public SystemListener getSystemListener() {
+        return listener;
+    }
+
+    @Override
     public void setSystemListener(SystemListener listener) {
         this.listener = listener;
     }
@@ -116,6 +126,10 @@ public abstract class LwjglContext implements JmeContext {
             case AppSettings.LWJGL_OPENGL30:
                 maj = 3;
                 min = 0;
+                break;
+            case AppSettings.LWJGL_OPENGL31:
+                maj = 3;
+                min = 1;
                 break;
             case AppSettings.LWJGL_OPENGL32:
                 maj = 3;
@@ -155,7 +169,7 @@ public abstract class LwjglContext implements JmeContext {
 
     protected ContextAttribs createContextAttribs() {
         int vers[] = getGLVersion(settings.getRenderer());
-        if (settings.getBoolean("GraphicsDebug") || (vers != null && vers[0] != 2)) {
+        if (settings.isGraphicsDebug() || (vers != null && vers[0] != 2)) {
             ContextAttribs attr;
             if (vers != null && vers[0] != 2) {
                 attr = new ContextAttribs(vers[0], vers[1]);
@@ -163,7 +177,7 @@ public abstract class LwjglContext implements JmeContext {
             } else {
                 attr = new ContextAttribs();
             }
-            if (settings.getBoolean("GraphicsDebug")) {
+            if (settings.isGraphicsDebug()) {
                 attr = attr.withDebug(true);
             }
             return attr;
@@ -189,11 +203,11 @@ public abstract class LwjglContext implements JmeContext {
             listener.handleError("Failed to check if display is current", ex);
         }
         if ((Pbuffer.getCapabilities() & Pbuffer.PBUFFER_SUPPORTED) == 0) {
-            // No pbuffer, assume everything is supported.
+            // No PBuffer, assume everything is supported.
             return Integer.MAX_VALUE;
         } else {
             Pbuffer pb = null;
-            // OpenGL2 method: Create pbuffer and query samples
+            // OpenGL2 method: Create PBuffer and query samples
             // from GL_ARB_framebuffer_object or GL_EXT_framebuffer_multisample.
             try {
                 pb = new Pbuffer(1, 1, new PixelFormat(0, 0, 0), null);
@@ -246,64 +260,88 @@ public abstract class LwjglContext implements JmeContext {
         return samples;
     }
 
+    /**
+     * Reinitializes the relevant details of the context. For internal use only.
+     */
+    protected void reinitContext() {
+        initContext(false);
+    }
+
+    /**
+     * Initializes the LWJGL renderer and input for the first time. For internal
+     * use only.
+     */
     protected void initContextFirstTime() {
+        initContext(true);
+    }
+
+    /**
+     * Initializes the LWJGL renderer and input.
+     * @param first - Whether this is the first time we are initializing and we
+     * need to create the renderer or not. Otherwise, we'll just reset the
+     * renderer as needed.
+     */
+    private void initContext(boolean first) {
         if (!GLContext.getCapabilities().OpenGL20) {
             throw new RendererException("OpenGL 2.0 or higher is "
                     + "required for jMonkeyEngine");
         }
-        
-        int vers[] = getGLVersion(settings.getRenderer());
-        if (vers != null) {
-            GL gl = new LwjglGL();
-            GLExt glext = new LwjglGLExt();
-            GLFbo glfbo;
-            
-            if (GLContext.getCapabilities().OpenGL30) {
-                glfbo = new LwjglGLFboGL3();
-            } else {
-                glfbo = new LwjglGLFboEXT();
+
+        int version[] = getGLVersion(settings.getRenderer());
+        if (version != null) {
+            if (first) {
+                GL gl = new LwjglGL();
+                GLExt glext = new LwjglGLExt();
+                GLFbo glfbo;
+
+                if (GLContext.getCapabilities().OpenGL30) {
+                    glfbo = new LwjglGLFboGL3();
+                } else {
+                    glfbo = new LwjglGLFboEXT();
+                }
+
+                if (settings.isGraphicsDebug()) {
+                    gl = (GL) GLDebug.createProxy(gl, gl, GL.class, GL2.class, GL3.class, GL4.class);
+                    glext = (GLExt) GLDebug.createProxy(gl, glext, GLExt.class);
+                    glfbo = (GLFbo) GLDebug.createProxy(gl, glfbo, GLFbo.class);
+                }
+                if (settings.isGraphicsTiming()) {
+                    GLTimingState timingState = new GLTimingState();
+                    gl = (GL) GLTiming.createGLTiming(gl, timingState, GL.class, GL2.class, GL3.class, GL4.class);
+                    glext = (GLExt) GLTiming.createGLTiming(glext, timingState, GLExt.class);
+                    glfbo = (GLFbo) GLTiming.createGLTiming(glfbo, timingState, GLFbo.class);
+                }
+                if (settings.isGraphicsTrace()) {
+                    gl = (GL) GLTracer.createDesktopGlTracer(gl, GL.class, GL2.class, GL3.class, GL4.class);
+                    glext = (GLExt) GLTracer.createDesktopGlTracer(glext, GLExt.class);
+                    glfbo = (GLFbo) GLTracer.createDesktopGlTracer(glfbo, GLFbo.class);
+                }
+                renderer = new GLRenderer(gl, glext, glfbo);
+                renderer.initialize();
             }
-            
-            if (settings.getBoolean("GraphicsDebug")) {
-                gl = new GLDebugDesktop(gl, glext, glfbo);
-                glext = (GLExt) gl;
-                glfbo = (GLFbo) gl;
-            }
-            if (settings.getBoolean("GraphicsTiming")) {
-                GLTimingState timingState = new GLTimingState();
-                gl = (GL) GLTiming.createGLTiming(gl, timingState, GL.class, GL2.class, GL3.class, GL4.class);
-                glext = (GLExt) GLTiming.createGLTiming(glext, timingState, GLExt.class);
-                glfbo = (GLFbo) GLTiming.createGLTiming(glfbo, timingState, GLFbo.class);
-            }
-            if (settings.getBoolean("GraphicsTrace")) {
-                gl = (GL) GLTracer.createDesktopGlTracer(gl, GL.class, GL2.class, GL3.class, GL4.class);
-                glext = (GLExt) GLTracer.createDesktopGlTracer(glext, GLExt.class);
-                glfbo = (GLFbo) GLTracer.createDesktopGlTracer(glfbo, GLFbo.class);
-            }
-            renderer = new GLRenderer(gl, glext, glfbo);
-            renderer.initialize();
         } else {
             throw new UnsupportedOperationException("Unsupported renderer: " + settings.getRenderer());
         }
-        if (GLContext.getCapabilities().GL_ARB_debug_output && settings.getBoolean("GraphicsDebug")) {
+        if (GLContext.getCapabilities().GL_ARB_debug_output && settings.isGraphicsDebug()) {
             ARBDebugOutput.glDebugMessageCallbackARB(new ARBDebugOutputCallback(new LwjglGLDebugOutputHandler()));
         }
         renderer.setMainFrameBufferSrgb(settings.isGammaCorrection());
         renderer.setLinearizeSrgbImages(settings.isGammaCorrection());
 
-        // Init input
-        if (keyInput != null) {
-            keyInput.initialize();
-        }
+        if (first) {
+            // Init input
+            if (keyInput != null) {
+                keyInput.initialize();
+            }
 
-        if (mouseInput != null) {
-            mouseInput.initialize();
-        }
+            if (mouseInput != null) {
+                mouseInput.initialize();
+            }
 
-        if (joyInput != null) {
-            joyInput.initialize();
+            if (joyInput != null) {
+                joyInput.initialize();
+            }
         }
-        
     }
 
     @SuppressWarnings("unchecked")
@@ -360,7 +398,7 @@ public abstract class LwjglContext implements JmeContext {
         PlatformChooser chooser = null;
         if (settings.getOpenCLPlatformChooser() != null) {
             try {
-                chooser = (PlatformChooser) Class.forName(settings.getOpenCLPlatformChooser()).newInstance();
+                chooser = (PlatformChooser) Class.forName(settings.getOpenCLPlatformChooser()).getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 logger.log(Level.WARNING, "unable to instantiate custom PlatformChooser", ex);
             }
@@ -368,10 +406,10 @@ public abstract class LwjglContext implements JmeContext {
         if (chooser == null) {
             chooser = new DefaultPlatformChooser();
         }
-        List<? extends Device> choosenDevices = chooser.chooseDevices(platforms);
-        List<CLDevice> devices = new ArrayList<>(choosenDevices.size());
+        List<? extends Device> chosenDevices = chooser.chooseDevices(platforms);
+        List<CLDevice> devices = new ArrayList<>(chosenDevices.size());
         LwjglPlatform platform = null;
-        for (Device d : choosenDevices) {
+        for (Device d : chosenDevices) {
             if (!(d instanceof LwjglDevice)) {
                 logger.log(Level.SEVERE, "attempt to return a custom Device implementation from PlatformChooser: {0}", d);
                 return;
@@ -390,13 +428,15 @@ public abstract class LwjglContext implements JmeContext {
             return;
         }
         clPlatform = platform;
-        logger.log(Level.INFO, "chosen platform: {0}", platform.getName());
-        logger.log(Level.INFO, "chosen devices: {0}", choosenDevices);
+        if (logger.isLoggable(Level.INFO)) {
+            logger.log(Level.INFO, "chosen platform: {0}", platform.getName());
+            logger.log(Level.INFO, "chosen devices: {0}", chosenDevices);
+        }
         
         //create context
         try {
             CLContext c = CLContext.create(platform.getPlatform(), devices, null, Display.getDrawable(), null);
-            clContext = new com.jme3.opencl.lwjgl.LwjglContext(c, (List<LwjglDevice>) choosenDevices);
+            clContext = new com.jme3.opencl.lwjgl.LwjglContext(c, (List<LwjglDevice>) chosenDevices);
         } catch (LWJGLException ex) {
             logger.log(Level.SEVERE, "Unable to create OpenCL context", ex);
             return;
@@ -446,25 +486,31 @@ public abstract class LwjglContext implements JmeContext {
         }
     }
 
+    @Override
     public boolean isCreated() {
         return created.get();
     }
+    @Override
     public boolean isRenderable() {
         return renderable.get();
     }
 
+    @Override
     public void setSettings(AppSettings settings) {
         this.settings.copyFrom(settings);
     }
 
+    @Override
     public AppSettings getSettings() {
         return settings;
     }
 
+    @Override
     public Renderer getRenderer() {
         return renderer;
     }
 
+    @Override
     public Timer getTimer() {
         return timer;
     }
@@ -472,5 +518,49 @@ public abstract class LwjglContext implements JmeContext {
     @Override
     public com.jme3.opencl.Context getOpenCLContext() {
         return clContext;
+    }
+
+    /**
+     * Returns the height of the framebuffer.
+     *
+     * @return the height (in pixels)
+     */
+    @Override
+    public int getFramebufferHeight() {
+        int result = Display.getHeight();
+        return result;
+    }
+
+    /**
+     * Returns the width of the framebuffer.
+     *
+     * @return the width (in pixels)
+     */
+    @Override
+    public int getFramebufferWidth() {
+        int result = Display.getWidth();
+        return result;
+    }
+
+    /**
+     * Returns the screen X coordinate of the left edge of the content area.
+     *
+     * @return the screen X coordinate
+     */
+    @Override
+    public int getWindowXPosition() {
+        int result = Display.getX();
+        return result;
+    }
+
+    /**
+     * Returns the screen Y coordinate of the top edge of the content area.
+     *
+     * @return the screen Y coordinate
+     */
+    @Override
+    public int getWindowYPosition() {
+        int result = Display.getY();
+        return result;
     }
 }
